[gd_scene load_steps=5 format=2]

[ext_resource path="res://strand/OrbitCamera.gd" type="Script" id=1]
[ext_resource path="res://strand/Generation.tscn" type="PackedScene" id=2]
[ext_resource path="res://island/IslandGeneration.gd" type="Script" id=3]
[ext_resource path="res://island/StrandButton.gd" type="Script" id=4]

[node name="Spatial" type="Spatial"]

[node name="OrbitCamera" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="OrbitCamera"]
transform = Transform( 1, 0, 0, 0, 0.722726, 0.691135, 0, -0.691135, 0.722726, -0.236519, 6.70234, 8.11177 )

[node name="Island" parent="." instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Strand1" type="Button" parent="Node2D"]
margin_left = 46.0346
margin_top = 39.685
margin_right = 229.035
margin_bottom = 91.685
text = "Strand #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strand2" type="Button" parent="Node2D"]
margin_left = 46.0346
margin_top = 107.943
margin_right = 229.035
margin_bottom = 159.943
text = "Strand #2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strand3" type="Button" parent="Node2D"]
margin_left = 44.4473
margin_top = 177.789
margin_right = 227.447
margin_bottom = 229.789
text = "Strand #3"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Node2D/Strand1" to="Node2D" method="_on_Strand1_pressed"]
[connection signal="pressed" from="Node2D/Strand2" to="Node2D" method="_on_Strand2_pressed"]
[connection signal="pressed" from="Node2D/Strand3" to="Node2D" method="_on_Strand3_pressed"]
